images: Ensure we always request the min of max bytes or desired bytes.

On low end android, MaxDecodedImageBytes() might return a value that
is smaller than the size we request. The reason we request a larger
size is that only some of the codecs support decoding to a smaller size,
and for things like PNGs we would still be requesting an intrinsic size
even though the max bytes is smaller than that. This trips up a DCHECK.

The fix, as suggested by the bug reporter, is to take the minimum of
desired bytes and max bytes.

R=chrishtr@chromium.org

Bug: 798110
Change-Id: I092541359164f4e08af68bf0e7939f2a9f8c8237
Reviewed-on: https://chromium-review.googlesource.com/847632
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: vmpstr <vmpstr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526551}
Former-commit-id: 9d1809c798a342dc34d8be2d90495c541a43145a